Enhance the FluentCxSleekDial component... Add a StayOpen parameter to allow the component to stay open when an item is clicked Adds a IsVisible parameter to show or collapse the item Correct an issue with a CSS

--- a/src/Community.Components/Components/SleekDial/SleekDialItemView.razor.css
+++ b/src/Community.Components/Components/SleekDial/SleekDialItemView.razor.css
@@ -24,6 +24,6 @@
   right: 0px;
 }
 
-sleekdialitem-radial-bottom {
+.sleekdialitem-radial-bottom {
     bottom: 0px;
 }
